--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,8 +1,11 @@
 .nav{
-    margin: 2em 2%;
+    margin: 3em 2%;
 }
 
 .nav-item{
+    display: flex;
+    gap: 1.5em;
+    margin-bottom: 1.8em;
     color: #D9D9D9;
     list-style: none;
     font-family: 'Poppins', sans-serif;
