--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,12 +1,17 @@
 .banner{
     position: relative;
+    margin-right: 4%;
+}
+
+.banner-img{
+    transform: scaleX(1.07);
 }
 
 .banner h2{
     color: #D9D9D9;
     font-size: 2.5em;
     position: absolute;
-    top: 20%;
+    top: 17%;
     left: 3%;
-    width: 20%;  
+    width: 25%;  
 }
