--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,5 +8,6 @@
     margin-bottom: 1.8em;
     color: #D9D9D9;
     list-style: none;
-    font-family: 'Poppins', sans-serif;
+    font-size: 1em;
+    text-decoration: none;
 }
