--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -2,3 +2,16 @@
     display: flex;
     justify-content: space-between;
 }
+
+body::-webkit-scrollbar{
+    width: 3px;
+  }
+  
+body::-webkit-scrollbar-thumb{
+    background-color: white;
+    border-radius: 50%;
+}
+
+body::-webkit-scrollbar-track{
+    background:  #644dd6 ;
+}
