--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -9,6 +9,7 @@
 
 .banner h2{
     color: #D9D9D9;
+    font-family: "GandhiSansRegular";
     font-size: 2.5em;
     position: absolute;
     top: 17%;
