--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,6 +15,7 @@
               linear-gradient( #C98CF1 0%, #8B78E5 100%) border-box;
     border-radius: 10px;
     border: 2px solid transparent;
+    font-family: "GandhiSansRegular";
     width: 40em;
     padding: 1em;
     color: #D9D9D9 ;
