--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,6 +8,17 @@
     margin-bottom: 1.8em;
     color: #D9D9D9;
     list-style: none;
+    font-family: "GandhiSansRegular";
     font-size: 1em;
     text-decoration: none;
+}
+
+.nav-item li{
+    font-family: "GandhiSansRegular";
+    font-size: 1.3em;
+}
+
+.nav ul:first-child{
+    color: #7B78E5;
+    font-weight: 700;
 }
