--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .banner{
     position: relative;
     margin-right: 4%;
@@ -8,7 +10,7 @@
 }
 
 .banner h2{
-    color: #D9D9D9;
+    color: var(--white);
     font-family: "GandhiSansRegular";
     font-size: 2.5em;
     position: absolute;
