--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -11,8 +11,9 @@
 
 .banner h2{
     color: var(--white);
-    font-family: "GandhiSansRegular";
+    font-family: var(--bold);
     font-size: 2.5em;
+    font-weight: 400;
     position: absolute;
     top: 17%;
     left: 3%;
