--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,15 @@ body {
 @font-face {
   font-family: "GandhiSansRegular";
   src: local("GandhiSansRegular"), url(./fonts/GandhiSans-Regular.otf);
+  font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "GandhiSansBold";
   src: local("GandhiSansBold"), url(./fonts/GandhiSans-Bold.otf);
+  font-weight: 700;
+  font-display: swap;
 }
 
 :root{
