--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -3,6 +3,14 @@
     justify-content: space-between;
 }
 
+.first-section div{
+    display: flex;
+    margin-right: 4.5%;
+    flex-direction: column;
+    align-items: self-start;
+    justify-content: space-between;
+}
+
 body::-webkit-scrollbar{
     width: 3px;
   }
