--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -9,3 +9,54 @@
     color: var(--purple);
     font-size: 1.7em;
 }
+
+.photos{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5em;
+    padding: 0;
+    list-style: none;
+    gap: 1em;
+}
+
+.pic{
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    max-height: 280px;
+    max-width: 280px;
+}
+
+.pic:hover{
+    transform: scale(1.025);
+    transition: 0.20s;
+}
+
+.pic img{
+    display: block;
+    width: 100%;
+}
+
+.pic-info{
+    display: block;
+    padding: 2.5% 5%;
+    background: var(--blue);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.pic-info h2{
+    color: var(--white);
+    font-family: var(--regular);
+    font-size: 1.125em;
+    font-weight: 700;
+    margin: 0;
+}
+
+.pic-info section p {
+    color: var(--white);
+    font-family: var(--regular);
+    font-size: 1em;
+    font-weight: 400;
+    margin: 0;
+}
