--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -3,6 +3,7 @@
 .tags{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0;
 }
 
@@ -21,5 +22,4 @@
     color: var(--light-gray);
     font-weight: 500;
     font-size: 1.3em;
-    margin-right: 20em;
 }
