--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -5,7 +5,8 @@
 
 .first-section div{
     display: flex;
-    margin-right: 4.5%;
+    margin-right: 1%;
+    margin-left: 5%;
     flex-direction: column;
     justify-content: space-between;
 }
